prepared logical device and command pool